major steps towards simulation animation (working closeup and gen loop)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ media/
 manim_notes.py
 ideas.py
 manim_experiments.py
+src/runs/continuous_lunar_lander/20231220_115303
+gymnasium_videos/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
